--- a/app/src/main/res/layout/item_bayan.xml
+++ b/app/src/main/res/layout/item_bayan.xml
@@ -12,7 +12,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <ImageView
             android:id="@+id/bayan_icon"
