--- a/app/src/main/res/layout/fragment_harmonica_catalog.xml
+++ b/app/src/main/res/layout/fragment_harmonica_catalog.xml
@@ -20,7 +20,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/harmonica_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="60dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
