--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
         tools:context=".ui.home.HomeFragment">
 
         <TextView
+            android:id="@+id/text_home"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
